src/styles/page.css.styl
@import "variable"

#page
  margin 40px 0

  li
    font-family serifFontStack
    line-height 1.75
    list-style circle
    margin-left 20px

  #connectedCases,
  #opportunities
    margin-top 40px
    padding-top 20px

    .title
      font-size 1.2em
      margin 5px 0
      position relative
      width 180px

  #connectedCases
    margin-top 0


  #connectedCases
    ul
      li
        display inline-block
        margin-left 0
        margin-bottom 20px
        text-align center
        width 49%

  .page-content
    h4
      margin-top 0

  #opportunities
    margin-top 0

    .title
      top 0
      width auto
      font-family sansSerifFontStack
      color #444
      &:hover
        color iorange

    ul
      li
        list-style none
        margin-left 0

  .operations-icon
    float right
    margin-left 20px
    width 75px

  .press
    li
      border-bottom 1px solid #ccc
      list-style none
      margin-left 0
      margin-bottom 20px

      .post-title
        display block
        margin 20px 0

    .git
      a
        box border-box

        background #f5f5f5
        border 1px solid rgba(0,0,0,0.15)
        border-radius 3px
        color #333
        display block
        font-size 0.8em
        padding 10px
        width 100%

      .simple,
      .post-date
        display none

  .yarpp-related-rss,
  article a[rel="nofollow"]
    display none

  .common
    input,
    textarea
      box border-box
      width 100%

    input
      padding 20px 10px

    textarea
      height 200px

  .history
    margin-bottom 20px
    position relative

    .year
      left -80px
      position absolute

    .text
      font-size 0.8em

  .tjanster
    margin-top 20px

    .offer
      padding-top 20px

      .title
        display inline-block
        font-size 1.2em
        line-height 1.2em
        margin-bottom 20px
        margin-top -25px
        margin-left 0
        color #444

  #financialNumbers
    position relative
    left -60px

  .legend
    margin-top 20px
    > div
      display inline-block
      margin-right 20px

    .box
      display inline-block
      height 0px
      margin-right 10px
      width 10px

    .advice
      .box
        background #F38630

    .systemdevelopment
      .box
        background #E0E4CC

    .operations
      .box
        background #69D2E7

  form
    margin 0
    padding-top 20px

    input
      display block
      line-height 1

    input[type="radio"],
    label
      display inline-block

    label
      margin 0 10px
      position relative
      top 3px

    textarea
      display block
      margin-top 10px
      width 50%

    input[type="submit"]
      margin-top 10px


  #about
    li
      list-style none
      margin-left 0

      a
        display block
        font-size 1em
        margin-bottom 10px

